2010-09-13  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Kenneth Rohde Christiansen.

        Add FrameNetworkingContextWinCE
        https://bugs.webkit.org/show_bug.cgi?id=45474

        * WebCoreSupport/FrameNetworkingContextWinCE.cpp: Added.
        (WebKit::FrameNetworkingContextWinCE::FrameNetworkingContextWinCE):
        (WebKit::FrameNetworkingContextWinCE::userAgent):
        (WebKit::FrameNetworkingContextWinCE::referrer):
        * WebCoreSupport/FrameNetworkingContextWinCE.h: Added.
        (WebKit::FrameNetworkingContextWinCE::create):

2010-08-31  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Kenneth Rohde Christiansen.

        Add EditorClientWinCE
        https://bugs.webkit.org/show_bug.cgi?id=44822

        * WebCoreSupport/EditorClientWinCE.cpp: Added.
        (WebKit::EditorClient::EditorClient):
        (WebKit::EditorClient::~EditorClient):
        (WebKit::EditorClient::setInputMethodState):
        (WebKit::EditorClient::shouldDeleteRange):
        (WebKit::EditorClient::shouldShowDeleteInterface):
        (WebKit::EditorClient::isContinuousSpellCheckingEnabled):
        (WebKit::EditorClient::isGrammarCheckingEnabled):
        (WebKit::EditorClient::spellCheckerDocumentTag):
        (WebKit::EditorClient::shouldBeginEditing):
        (WebKit::EditorClient::shouldEndEditing):
        (WebKit::EditorClient::shouldInsertText):
        (WebKit::EditorClient::shouldChangeSelectedRange):
        (WebKit::EditorClient::shouldApplyStyle):
        (WebKit::EditorClient::shouldMoveRangeAfterDelete):
        (WebKit::EditorClient::didBeginEditing):
        (WebKit::EditorClient::respondToChangedContents):
        (WebKit::EditorClient::respondToChangedSelection):
        (WebKit::EditorClient::didEndEditing):
        (WebKit::EditorClient::didWriteSelectionToPasteboard):
        (WebKit::EditorClient::didSetSelectionTypesForPasteboard):
        (WebKit::EditorClient::isEditable):