@@ -38,6 +38,7 @@ public:
 
     virtual WTF::String userAgent() const;
     virtual WTF::String referrer() const;
+    virtual WebCore::ResourceError blockedError(const WebCore::ResourceRequest&) const;
 
 private:
     FrameNetworkingContextWinCE(WebCore::Frame* frame, const WTF::String& userAgent);
