@@ -1,3 +1,14 @@
+2010-09-16  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Adam Roben.
+
+        [WINCE] Add missing FrameNetworkingContextWinCE::blockedError
+        https://bugs.webkit.org/show_bug.cgi?id=45680
+
+        * WebCoreSupport/FrameNetworkingContextWinCE.cpp:
+        (WebKit::FrameNetworkingContextWinCE::blockedError):
+        * WebCoreSupport/FrameNetworkingContextWinCE.h:
+
 2010-09-13  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Kenneth Rohde Christiansen.
